--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,2 @@
-
+server.port=8888
+spring.data.mongodb.uri=mongodb+srv://qkart_username:qkart_password@cluster0.axxg1rm.mongodb.net/X-Meme?retryWrites=true&w=majority
